--- a/MyriamBot/MainWindow.xaml
+++ b/MyriamBot/MainWindow.xaml
@@ -2,19 +2,22 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:controls="clr-namespace:WPFMediaKit.DirectShow.Controls;assembly=WPFMediaKit"
-        Title="Myriam - The Bot" Background="#FF7CA0FF" ResizeMode="CanMinimize" Loaded="Window_Loaded">
-    <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        Title="Myriam - The Bot" Background="#FF7CA0FF" ResizeMode="CanMinimize" Loaded="Window_Loaded"
+        Width="820" Height="470">
+    <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="400" />
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="200" />
+            <ColumnDefinition Width="500" />
+            <ColumnDefinition Width="300" />
         </Grid.ColumnDefinitions>
-        <TextBox Name="chatBox" IsReadOnly="True" VerticalScrollBarVisibility="Visible" VerticalAlignment="Stretch" Grid.Row="0" Grid.Column="0"/>
+        <TextBox Name="chatBox" IsReadOnly="True" VerticalScrollBarVisibility="Visible" TextWrapping="Wrap" Height="400" Width="490" VerticalAlignment="Stretch" Grid.Row="0" Grid.Column="0"/>
+        <Canvas HorizontalAlignment="Center" VerticalAlignment="Top" Grid.Row="0" Grid.Column="1" Height="300" Width="300">
+            <controls:VideoCaptureElement Name="captureElement" EnableSampleGrabbing="true" Visibility="Visible" Height="300" Width="300"/>
+        </Canvas>
         <ComboBox Name="cbCameras" SelectionChanged="cbCameras_SelectionChanged" Grid.Row="1" Grid.Column="1" />
-        <controls:VideoCaptureElement Name="captureElement" EnableSampleGrabbing="true" Visibility="Visible" Grid.Row="0" Grid.Column="1" />
         <Grid Grid.Row="1" Grid.Column="0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
@@ -27,7 +30,6 @@
             <Label Content="Message:" Name="lblMessage" Grid.Column="0" />
             <TextBox Name="messageText" Width="305" KeyUp="MessageText_KeyUp" Grid.Column="1"/>
             <Button Content="Send" Name="sendMessageButton" Click="SendMessageButton_Click" Grid.Column="2"/>
-
         </Grid>
     </Grid>
 </Window>
